# the-love-lang

./: CMakeLists.txt  README.md
src/: SourceFile.cc  SourceFile.h  main.cc
src/AST/: astNode.h  astVisitor.h
src/IRgenerator/: irGenerator.cc  irGenerator.h
src/IRoptimizer/: irOptimizer.cc  irOptimizer.h
src/Lexer/: Lexer.cc  Lexer.h  Token.h
src/ObjectEmitter/: objectEmitter.cc  objectEmitter.h
src/Parser/: parser.cc  parser.h
src/Reader/: CodeLoc.cc  CodeLoc.h  Reader.cc  Reader.h
src/TypeChecker/: typeChecker.cc  typeChecker.h
src/symbolTable/: SymbolTable.cc  SymbolTable.h  SymbolTableBuilder.cc  SymbolTableBuilder.h  SymbolTableEntry.cc  SymbolTableEntry.h  SymbolType.cc  SymbolType.h
